# django-link-shortener

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: django-tests.yml  pypi-publish.yml
django_link_shortener.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shortener/: admin.py  apps.py  models.py  shortener.py  shortern.py  tests.py  urls.py  views.py
shortener/migrations/: 0001_initial.py  0002_auto_20190528_1431.py  0002_auto_20190528_1522.py  0003_auto_20190528_1558.py  0004_alter_urlprofile_enabled.py  0005_alter_urlmap_id_alter_urlprofile_id.py
tests/: models.py  settings.py  urls.py  wsgi.py
tests/testapp/: models.py  test_regressions.py  tests.py
